Fix overflow in index page by adding containers and css refactoring.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -724,14 +724,6 @@ figure .wrap_img {
   display:inline-block;
   margin-bottom:4px
 }
-.social-icons li.title
-{
-  margin-right:15px;
-  text-transform:uppercase;
-  color:var(--second-color);
-  font-weight:700;
-  font-size:13px
-}
 .social-icons a{
   background-color:var(--second-color);
   color: var(--first-color);
@@ -749,19 +741,11 @@ figure .wrap_img {
   color:var(--second-color);
   background-color:var(--first-color);
 }
-.social-icons.size-sm a
-{
-  line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+
+@media (min-width: 1200px){
+#about.container,
+#security.container,
+footer.container {
+    max-width: 100% !important;
 }
-@media (max-width:767px)
-{
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
 }
